make sure photo covers post background

--- a/assets/sass/index.scss
+++ b/assets/sass/index.scss
@@ -72,7 +72,7 @@
     
             background-position: left;
             background-repeat: no-repeat;
-            background-size:auto;
+            background-size:cover;
     
             transition: transform 0.25s ease-in-out, box-shadow 0.25s ease-in-out;
         }
